2004-10-12  Johan Dahlin  <johan@gnome.org>

	* data/glade/Makefile.am:
	* data/glade/wizard.glade:
	* data/glade/wizard_welcome.glade:
	* flumotion/admin/gtk/client.py:
	* flumotion/wizard/wizard.py:
	* flumotion/wizard/wizard_step.py:

	Add a welcome step, add --wizard argument to flumotion-admin and
	run the wizard from there instead.

2004-10-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/component.py:
	* flumotion/test/test_manager.py:
	  uniformize and privatize getComponent(Eaters/Feeders)Data

2004-10-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/component/component.py:
	* flumotion/component/http/http.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/component.py:
	  move ui file bundling to base class and formalize a bit

2004-10-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/Makefile.am:
	* flumotion/common/interfaces.py:
	* flumotion/common/keycards.py:
	* flumotion/component/bouncer.py:
	* flumotion/component/http/http.py:
	* flumotion/manager/component.py:
	* flumotion/test/test_http.py:
	  make keycards module.  bouncer now works.

2004-10-11  Johan Dahlin  <johan@gnome.org>

	* Makefile.am:
	* bin/flumotion-admin.in:
	* bin/flumotion-worker.in:
	* bin/flumotion.in:
	* doc/reference/gendoc.py:
	* flumotion/common/setup.py:
	* flumotion/config/__init__.py:
	* flumotion/config/setup.py:
	* flumotion/test/common.py:
	* flumotion/tools/show-coverage:
	
	Add tool to show coverage. Clean up flumotion.config a little
	bit. There is now a common function (flumotion.config.setup.setup)
	to initialize parts, it should probably be made a little bit more
	flexible, but that's for later

2004-10-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/ogg-test-theora-bouncer.xml:
	* flumotion/common/keycard.py:
	* flumotion/component/component.py:
	* flumotion/component/http/http.py: