@@ -1,3 +1,9 @@
+2004-10-12  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/manager/component.py:
+	* flumotion/test/test_manager.py:
+	  uniformize, privatize, rewrite, remove, restructure
+
 2004-10-12  Johan Dahlin  <johan@gnome.org>
 
 	* data/glade/Makefile.am:
